[package]
name = "log-server"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
tonic-build = "0.14.3"
