[workspace]
members = ["server"]
resolver = "2"

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = "0.4"
futures-util = "0.3"
prost = "0.14"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tonic-prost-build = "0.14.3"
