[package]
name = "log-map"
version = "0.1.0"
edition = "2024"
description = "A distributed key-value map backed by the log-server"
license = "MIT"

[dependencies]
log-server-types = { path = "../types" }
tokio = { version = "1", features = ["full"] }
tonic = "0.14.3"
futures-util = "0.3"
thiserror = "2"
