[package]
name = "log-server"
version = "0.2.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = "0.4"
futures-util = "0.3"
log-server-types = { path = "../types" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tonic-prost-build = "0.14.3"
